src/test/ui/issues/issue-59756.stderr
error[E0308]: try expression alternatives have incompatible types
  --> $DIR/issue-59756.rs:13:5
   |
LL |     foo()?
   |     ^^^^^^ expected enum `std::result::Result`, found struct `A`
   |
   = note: expected type `A`
              found type `std::result::Result<A, B>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
